Fixed some spacing in news

--- a/src/sass/components/_components.home-news.scss
+++ b/src/sass/components/_components.home-news.scss
@@ -11,8 +11,17 @@
         @media screen and (min-width: 1100px) {
             width: auto;
         }
+        @media screen and (max-width: 1440px) {
+            &:nth-child(n+3) {
+                display: none;
+            }
+        }
+        @media screen and (min-width: 1440px) {
+            width: 26%;
+            max-width: 30em;
+        }
         @media screen and (min-width: 2000px) {
-            &:nth-child(2n) {
+            &:nth-child(n+2) {
                 margin-left: inuit-rem(90px);
             }
         }
@@ -39,6 +48,7 @@
         }
     }
     &__title {
+        margin-top: $inuit-global-spacing-unit;
         margin-bottom: 2*$inuit-global-spacing-unit;
         &::before {
             font-family: FontAwesome;
@@ -48,6 +58,7 @@
         @media screen and (min-width: 768px) {
             display: flex;
             justify-content: center;
+            margin-bottom: 3*$inuit-global-spacing-unit;
         }
     }
 }
